<resources>
    <string name="app_name">LoginScreen</string>
    <string name="facebook">Facebook</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_for_facebbok">Sign Up For Facebook</string>
    <string name="help_center">Help Center</string>
    <string name="_2_hrs">2 hrs</string>
    <string name="buckle_up_because_change_is_coming_at_word_press">buckle up , because change is coming at word press</string>
    <string name="http_unblast_com_color_schemes">http:unblast.com/color-schemes</string>
    <string name="_1_share">1 Share</string>
    <string name="like">like</string>
    <string name="unblast">unblast</string>
    <string name="share">Share</string>
</resources>