<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <view

        android:id="@+id/view"
        class="android.widget.HorizontalScrollView"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/unblast"
        android:textSize="17sp"


        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_hrs"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/postTitleTV"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buckle_up_because_change_is_coming_at_word_press"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/http_unblast_com_color_schemes"
        android:textColor="#2196F3"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/postTitleTV"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTitleTV" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:background="#FFC501"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/thumbup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="12"

        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="88dp"
        android:text="@string/_1_share"

        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/shareIB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        />

    <ImageButton
        android:id="@+id/commentIB"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="52dp"
        android:background="@drawable/comment"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like" />

    <TextView
        android:id="@+id/commentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comment"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/commentIB"
        app:layout_constraintBottom_toBottomOf="@id/commentIB"
         />

    <ImageButton
        android:id="@+id/shareIB"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/share"
        app:layout_constraintBottom_toBottomOf="@id/commentTV"
        app:layout_constraintStart_toEndOf="@id/commentTV" />

    <TextView
        android:id="@+id/shareTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/shareIB"
        app:layout_constraintBottom_toBottomOf="@id/shareIB"
        />

</androidx.constraintlayout.widget.ConstraintLayout>